--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title> ARS CLUBS</title>
   </head>
   <body>
   <h1> Arnold Cinta Brenda</h1>
