--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title> ARS CLUBS</title>
   </head>
   <body>
-  <h1> Arnold Cinta Brenda</h1>
+  <h1> WElcome to ARS CLUBS</h1>
   </body>
  </html>
